// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Switch /> should render checked 1`] = `
<div
  className="form-switch form-switch--checked"
>
  <input
    checked={true}
    className="form-switch__cb"
    disabled={false}
    id="sw"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="form-switch__ball"
    htmlFor="sw"
  />
</div>
`;

exports[`component <Switch /> should render correctly 1`] = `
<div
  className="form-switch"
>
  <input
    checked={false}
    className="form-switch__cb"
    disabled={false}
    id="sw"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="form-switch__ball"
    htmlFor="sw"
  />
</div>
`;

exports[`component <Switch /> should render disabled 1`] = `
<div
  className="form-switch form-switch--disabled"
>
  <input
    checked={false}
    className="form-switch__cb"
    disabled={true}
    id="sw"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="form-switch__ball"
    htmlFor="sw"
  />
</div>
`;

exports[`component <Switch /> should render texted 1`] = `
<div
  className="form-switch form-switch--texted"
>
  <input
    checked={false}
    className="form-switch__cb"
    disabled={false}
    id="sw"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="form-switch__ball"
    htmlFor="sw"
  />
</div>
`;

exports[`component <Switch /> should trigger onChange 1`] = `
<div
  className="form-switch"
>
  <input
    checked={false}
    className="form-switch__cb"
    disabled={false}
    id="sw"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="form-switch__ball"
    htmlFor="sw"
  />
</div>
`;
